k8s/picidae.app.yml
apiVersion: v1
kind: Service
metadata:
  name: picidae
spec:
  selector:
    app: picidae
  ports:
    - name: picidaeport
      port: 4201
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picidae
  annotations:
    container.apparmor.security.beta.kubernetes.io/picidae: runtime/default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: picidae
  template:
    metadata:
      labels:
        app: picidae
    spec:
      imagePullSecrets:
        - name: picidaereg
      containers:
        - name: picidae
          image: ghcr.io/devcon4/picidae:0.1.13-devync-test-branch.1
          
          # securityContext:
          # runAsNonRoot: true
          # readOnlyRootFilesystem: true
          # capabilities:
          #   add:
          #   - NET_BIND_SERVICE
          #   drop:
          #   - all
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "240m"
              memory: ".25Gi"
