k8s/picidae.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: picidae-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: devync-test-branch.picidae.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: picidae
              servicePort: picidaeport
