k8s/picidae.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: picidae-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: picidae.local
      http:
        paths:
          - path: /
            backend:
              serviceName: picidae
              servicePort: picidaeport
---
apiVersion: v1
kind: Service
metadata:
  name: picidae
spec:
  selector:
    app: picidae
  ports:
    - name: picidaeport
      port: 4201
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picidae
  annotations:
    container.apparmor.security.beta.kubernetes.io/picidae: runtime/default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: picidae
  template:
    metadata:
      labels:
        app: picidae
    spec:
      containers:
        - name: picidae
          image: ghcr.io/devcon4/picidae:latest
          # securityContext:
          # runAsNonRoot: true
          # readOnlyRootFilesystem: true
          # capabilities:
          #   add:
          #   - NET_BIND_SERVICE
          #   drop:
          #   - all
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "240m"
              memory: ".25Gi"
